# mezzoic_demo_mcp_server

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/config/: logging_config.py  settings.py
app/domain/: entity.py  user.py
app/infrastructure/api/: static_routes.py  user_routes.py
app/infrastructure/mcp/: user_tools.py
app/infrastructure/persistence/: user_repo.py
app/interfaces/controllers/: iuser_controller.py
app/interfaces/mcp/: tools_handlers.py
app/interfaces/repositories/: user_repository.py
app/use_cases/: create_user.py  get_user.py
client/: client.py
