[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-mcp-server"
version = "0.1.0"
description = "Clean Architecture template for a FastAPI-based MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core dependencies
dependencies = [
  "fastapi>=0.100.0,<0.101.0",
  "uvicorn[standard]>=0.23.0,<1.0.0",
  "sqlalchemy>=2.0.0,<3.0",
  # Pydantic is pulled in by FastAPI 0.100+ which requires Pydantic v2
  "pydantic-settings>=2.0,<3.0",  # standalone settings support
  "loguru>=0.7.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0,<8.0",
  "black>=23.3.0,<24.0",
  "flake8>=6.0.0,<7.0",
  "mypy>=1.0.0,<2.0",
]
